distinguish between 'user' and 'auth'
