# src/api/users.ts
@@ -7,13 +7,6 @@ export const getUsers = (params: any) =>
     params
   })
 
-export const getUserInfo = (data: any) =>
-  request({
-    url: '/users/info',
-    method: 'post',
-    data
-  })
-
 export const getUserByName = (username: string) =>
   request({
     url: `/users/${username}`,
@@ -31,24 +24,4 @@ export const deleteUser = (username: string) =>
   request({
     url: `/users/${username}`,
     method: 'delete'
-  })
-
-export const login = (data: any) =>
-  request({
-    url: '/users/login',
-    method: 'post',
-    data
-  })
-
-export const logout = () =>
-  request({
-    url: '/users/logout',
-    method: 'post'
-  })
-
-export const register = (data: any) =>
-  request({
-    url: '/users/register',
-    method: 'post',
-    data
   })
